# SubsetSumSolver

./: .clang-format  2.txt  CMakeLists.txt  ConstantsAndTypes.h  DummyImplementation.cpp  DummyImplementation.h  FFTSolver.cpp  FFTSolver.h  FormalPowerSeries.cpp  FormalPowerSeries.h  PrimeDecider.cpp  PrimeDecider.h  README.md  SubsetSumImpl.cpp  SubsetSumImpl.h  SubsetSumSolver.cpp  SubsetSumSolver.h  Util.h  build.sh  build_and_run.sh  build_tests.sh  clang-format.sh  correctness_tests.sh  example_input.txt  gen.py  gen_correctness_tests.py  in.txt  main.cpp  performance_tests.sh  tests.sh
Common/: ConstantsAndTypes.h  Util.h
DataModel/: FormalPowerSeries.cpp  FormalPowerSeries.h  Zp.cpp  Zp.h  ZpField.cpp  ZpField.h
Implementations/: DynamicProgrammingImpl.cpp  DynamicProgrammingImpl.h  MainImpl.cpp  MainImpl.h  SubsetSumImpl.cpp  SubsetSumImpl.h
SupplementaryAlgorithms/: FFTCalculator.cpp  FFTCalculator.h  NTTCalculator.cpp  NTTCalculator.h  PrimeDecider.cpp  PrimeDecider.h
src/: CMakeLists.txt  SubsetSumSolver.cpp  SubsetSumSolver.h  main.cpp
src/Common/: ConstantsAndTypes.h  Util.h
src/DataModel/: FormalPowerSeries.cpp  FormalPowerSeries.h  Zp.cpp  Zp.h
src/Implementations/: DynamicProgrammingImpl.cpp  DynamicProgrammingImpl.h  MainImpl.cpp  MainImpl.h  SubsetSumImpl.cpp  SubsetSumImpl.h
src/SupplementaryAlgorithms/: FFTCalculator.cpp  FFTCalculator.h  NTTCalculator.cpp  NTTCalculator.h  PrimeDecider.cpp  PrimeDecider.h
tests/: CMakeLists.txt  formalpowerseries_test.cpp  gen_correctness_tests.py  gen_performance.py  test.cpp  zp_test.cpp
